--- a/examples/package/secure_ros.yaml
+++ b/examples/package/secure_ros.yaml
@@ -1,10 +1,7 @@
-# Secure ROS configuration file
 cpus: 1
 memory: 1024
-version: 0.9.2-1
 release: kinetic
+version: 0.9.2-1
 architectures:
-  amd64:
-    box: "xenial64"
-  i386:
-    box: "xenial32"
+  amd64: {box: xenial64}
+  i386: {box: xenial32}
