--- a/examples/package/Vagrantfile
+++ b/examples/package/Vagrantfile
@@ -11,9 +11,10 @@ GUEST_SROS_FOLDER = "/secure_ros"
 VAGRANT_ROOT = File.dirname(__FILE__)
 SECURE_ROS_CONF = YAML.load_file("#{VAGRANT_ROOT}/secure_ros.yaml")
 VERSION = SECURE_ROS_CONF["version"]
+UBUNTU_RELEASE = SECURE_ROS_CONF["ubuntu"]
 RELEASE = SECURE_ROS_CONF["release"]
 ARCHITECTURES = SECURE_ROS_CONF["architectures"]
-WORKSPACE = "~/workspace"
+WORKSPACE = "~/workspace/#{RELEASE}"
 MEMORY = SECURE_ROS_CONF["memory"]
 CPUS = SECURE_ROS_CONF["cpus"]
 
@@ -27,7 +28,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
     config.vm.synced_folder HOST_SROS_FOLDER, GUEST_SROS_FOLDER
 
-    machine_name = "#{RELEASE}-#{arch_key}"
+    machine_name = "#{UBUNTU_RELEASE}-#{arch_key}"
     config.vm.define "#{machine_name}" do |machine|
       machine.vm.box = arch_val["box"]
       machine.vm.hostname = machine_name
@@ -39,6 +40,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         ansible.extra_vars = { 
           secure_ros_folder: GUEST_SROS_FOLDER,
           ros_release: RELEASE,
+          ubuntu_release: UBUNTU_RELEASE,
           package_version: VERSION,
         }
       end
