--- a/examples/package/secure_ros.yaml
+++ b/examples/package/secure_ros.yaml
@@ -1,7 +1,8 @@
 cpus: 1
 memory: 1024
 release: kinetic
-version: 0.9.2-1
+ubuntu: xenial
+version: 0.9.3-1
 architectures:
   amd64: {box: xenial64}
   i386: {box: xenial32}
